# liber

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  gradle.properties  settings.gradle.kts  teste.jks
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/example/liber/: LiberTestRunner.kt
app/src/androidTest/java/com/example/liber/core/testutils/: DataStoreTestHelper.kt  DatabaseTestHelper.kt  FileTestHelper.kt  UiAutomatorHelper.kt
app/src/androidTest/java/com/example/liber/feature/reader/: ReaderE2ETest.kt
app/src/androidTest/java/com/example/liber/feature/settings/: SettingsE2ETest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/crengine/src/: lvdocview.cpp
app/src/main/cpp/jni/: cr3engine.cpp  cr3java.h  docview.cpp  org_coolreader_crengine_DocView.h
app/src/main/cpp/thirdparty_libs/: CMakeLists.txt
app/src/main/cpp/thirdparty_libs/antiword/: CMakeLists.txt
app/src/main/cpp/thirdparty_libs/chmlib/: CMakeLists.txt
app/src/main/cpp/thirdparty_libs/freetype/: CMakeLists.txt
app/src/main/cpp/thirdparty_libs/fribidi/: CMakeLists.txt
app/src/main/cpp/thirdparty_libs/harfbuzz/: CMakeLists.txt
app/src/main/cpp/thirdparty_libs/libjpeg/: CMakeLists.txt
app/src/main/cpp/thirdparty_libs/libpng/: CMakeLists.txt
app/src/main/cpp/thirdparty_libs/libunibreak/: CMakeLists.txt
app/src/main/cpp/thirdparty_libs/qimagescale/: CMakeLists.txt
app/src/main/cpp/thirdparty_libs/utf8proc/: CMakeLists.txt
app/src/main/cpp/thirdparty_libs/zstd/: CMakeLists.txt
app/src/main/java/com/example/liber/: LiberApplication.kt  MainActivity.kt
app/src/main/java/com/example/liber/api/: FreeDictApi.kt  ITunesSearchApi.kt
app/src/main/java/com/example/liber/core/designsystem/: AppErrorState.kt  AudiobookCover.kt  BookActionMenu.kt  BookCover.kt  BookGrid.kt  BookGridItem.kt  BookListCard.kt  BookListItem.kt  Color.kt  DeleteBookConfirmationDialog.kt  EditorialComponents.kt  EmptyState.kt  ExtendedColorScheme.kt  LiberBottomNav.kt  LiberButton.kt  LiberContextMenu.kt  LiberDialog.kt  LiberFAB.kt  LiberLibraryToolbar.kt  LiberModalBottomSheet.kt  LiberNavRail.kt  LiberScreen.kt  LiberTabBar.kt  LiberTextField.kt  ModifierExtensions.kt  RenameBookDialog.kt  ScanProgressBanner.kt  Theme.kt  Type.kt  WantToReadCover.kt
app/src/main/java/com/example/liber/core/error/: AppError.kt
app/src/main/java/com/example/liber/core/intent/: AppIntentHandler.kt
app/src/main/java/com/example/liber/core/logging/: AndroidAppLogger.kt  AppLogger.kt  BaseAndroidViewModel.kt  BaseRepository.kt  BaseViewModel.kt  RepositoryLogger.kt  ViewModelLogger.kt
app/src/main/java/com/example/liber/core/navigation/: AppNavHost.kt  AppTab.kt
app/src/main/java/com/example/liber/core/util/: ErrorHandling.kt  FileSecurityUtils.kt  InputValidator.kt  Serializers.kt  StringExtensions.kt  TimeExtensions.kt  UiState.kt  UiText.kt
app/src/main/java/com/example/liber/data/: AnnotationEntity.kt  AppDatabase.kt  Book.kt  BookCollectionEntity.kt  BookDao.kt  BookEntity.kt  BookImporter.kt  BookMappings.kt  BookRepository.kt  BookmarkEntity.kt  CollectionDao.kt  CollectionEntity.kt  CollectionRepository.kt  CollectionWithBooksRelation.kt  InkStrokeDao.kt  InkStrokeEntity.kt  ScanSourceDao.kt  ScanSourceEntity.kt  ScanSourceRepository.kt  ScanState.kt  ScanStateHolder.kt
app/src/main/java/com/example/liber/data/local/: AppDatabase.kt  BookDao.kt  CollectionDao.kt  CollectionWithBooksRelation.kt  CollectionWithPreviewRelation.kt  Converters.kt  DictionaryDao.kt  DictionaryEntryWithSenses.kt  ReadingSessionDao.kt  ScanSourceDao.kt  ScanStateHolder.kt  WordLemmaDao.kt
app/src/main/java/com/example/liber/data/model/: Annotation.kt  AnnotationEntity.kt  AnnotationMappings.kt  AudioFormats.kt  BackupData.kt  Book.kt  BookCollection.kt  BookCollectionEntity.kt  BookEntity.kt  BookMappings.kt  BookPreview.kt  Bookmark.kt  BookmarkEntity.kt  Collection.kt  CollectionEntity.kt  CollectionMappings.kt  Dictionary.kt  DictionaryEntry.kt  DictionaryLookupHistory.kt  DictionarySense.kt  FreeDictCatalogItem.kt  ReadingSession.kt  ScanSource.kt  ScanSourceEntity.kt  ScanState.kt  WordLemma.kt
app/src/main/java/com/example/liber/data/prefs/: UserPreferencesRepository.kt
app/src/main/java/com/example/liber/data/repository/: BackupRepository.kt  BookImporter.kt  BookRepository.kt  CollectionRepository.kt  DictionaryRepository.kt  LemmatizationManager.kt  ReadingInsightsRepository.kt  ReadingSessionTracker.kt  ScanSourceRepository.kt  StarDictIndexer.kt  UserPreferencesRepository.kt
app/src/main/java/com/example/liber/di/: DataStoreModule.kt  DatabaseModule.kt  LoggingModule.kt  RepositoryModule.kt
app/src/main/java/com/example/liber/feature/audiobook/: AudioPlayerScreen.kt  AudiobookPlayerViewModel.kt
app/src/main/java/com/example/liber/feature/collections/: CollectionDetailScreen.kt  CollectionDetailViewModel.kt  CollectionsScreen.kt  CollectionsViewModel.kt
app/src/main/java/com/example/liber/feature/dictionary/: DictionaryLookupSheet.kt  DictionaryManagementScreen.kt  (+3 more)
app/src/main/java/com/example/liber/player/: PlaybackService.kt
app/src/main/java/com/example/liber/service/: BookImportService.kt  BookScanService.kt
app/src/main/java/com/example/liber/ui/: LiberApp.kt  LiberAppViewModel.kt
app/src/main/java/org/coolreader/crengine/: BookInfo.kt  Bookmark.kt  DocView.kt  DocumentFormat.kt  Engine.kt  FileInfo.kt  ImageInfo.kt  PositionProperties.kt  ReaderCallback.kt  Selection.kt  TOCItem.kt
app/src/main/res/layout/: editable_pdf_viewer_container.xml  pdf_viewer_container.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-b+es+419/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/xml/: file_paths.xml  locales_config.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+87 files in other folders)
